# program-examples

./: .gitignore  .tool-versions  CONTRIBUTING.md  Cargo.toml  FIX_SUMMARY.md  POSEIDON_IMPLEMENTATION.md  README.md  STEEL_IMPLEMENTATION.md  a.sh  biome.json  biome.jsonc  failed_projects.txt  make-table-of-contents.ts  package.json  pnpm-lock.yaml  reset.sh  settings.json  solana-flags.json
anchor/cpi-example/programs/cpi_example/: Cargo.toml
basics/account-data/native/program/: Cargo.toml
basics/account-data/quasar/: Cargo.toml  Quasar.toml
basics/account-data/quasar/src/: lib.rs  state.rs  tests.rs
basics/account-data/steel/program/: Cargo.toml  cargo.toml
basics/checking-accounts/asm/: .gitignore  Cargo.toml  README.md  cicd.sh  package.json  pnpm-lock.yaml
basics/checking-accounts/asm/src/: lib.rs
basics/checking-accounts/asm/tests/: test.ts
basics/checking-accounts/native/program/: Cargo.toml
basics/checking-accounts/pinocchio/program/: Cargo.toml
basics/close-account/pinocchio/program/: Cargo.toml
basics/close-account/steel/: Cargo.toml  README.md  cicd.sh  package.json  pnpm-lock.yaml  tsconfig.json
basics/close-account/steel/api/: Cargo.toml
basics/close-account/steel/program/: Cargo.toml
basics/close-account/steel/tests/: bankrun.test.ts  close-account.test.ts  close.test.ts
basics/counter/mpl-stack/: .solitarc.js  Cargo.toml  README.md  jest.config.js  package.json
basics/counter/mpl-stack/idl/: counter_mpl_stack.json  counter_solana_native.json
basics/counter/mpl-stack/src/: lib.rs  state.rs
basics/counter/mpl-stack/tests/: counter.test.ts
basics/counter/native/program/: Cargo.toml
basics/counter/pinocchio/program/: Cargo.toml
basics/create-account/asm/: Cargo.toml  README.md  cicd.sh  package.json
basics/create-account/asm/src/: lib.rs
basics/create-account/asm/tests/: test.ts
basics/hello-solana/steel/: Cargo.toml  cargo.toml  package.json  pnpm-lock.yaml
basics/hello-solana/steel/api/: Cargo.toml
basics/hello-solana/steel/hello-word-steel/: Cargo.toml  README.md  try.txt
basics/hello-solana/steel/hello_solana/: README.md
basics/hello-solana/steel/program/: Cargo.toml
basics/hello-solana/steel/tests/: hello-solana.test.ts  index.test.ts
basics/pda-rent-payer/quasar/: Cargo.toml  Quasar.toml
basics/pda-rent-payer/quasar/src/: lib.rs  tests.rs
basics/processing-instructions/poseidon/: .gitignore  Anchor.toml  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
basics/processing-instructions/poseidon/processing-instructions-program/: Anchor.toml  pnpm-lock.yaml
basics/processing-instructions/poseidon/processing_instructions/: Anchor.toml
basics/processing-instructions/poseidon/programs/: Cargo.toml
basics/processing-instructions/poseidon/tests/: bankrun.test.ts  processing-instructions-program.ts  processing-instructions.ts  processing_instructions.ts  test.ts
basics/processing-instructions/poseidon/ts-programs/: pnpm-lock.yaml
basics/processing-instructions/steel/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
basics/processing-instructions/steel/api/: Cargo.toml
basics/processing-instructions/steel/program/: Cargo.toml
basics/processing-instructions/steel/tests/: main.test.ts  test.ts
basics/realloc/quasar/: Cargo.toml  Quasar.toml
basics/realloc/quasar/src/: lib.rs  state.rs  tests.rs
basics/transfer-sol/asm/: .gitignore  Cargo.toml  README.md  cicd.sh  package.json
basics/transfer-sol/asm/src/: lib.rs
basics/transfer-sol/asm/tests/: instruction.ts  test.ts
compression/cnft-burn/quasar/: Cargo.toml  Quasar.toml
compression/cnft-burn/quasar/src/: lib.rs  tests.rs
games/world-cup/pinocchio/: .env.example  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
games/world-cup/pinocchio/idl/: world_cup.json
games/world-cup/pinocchio/program/: Cargo.toml  build.rs
games/world-cup/pinocchio/scripts/: create-bracket.ts  generate-clients.ts  generate-ts-client.ts  init.ts
games/world-cup/pinocchio/webapp/: .env.example  .gitignore  README.md  index.html  middleware.ts  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
tokens/create-token/steel/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm.lock.yaml
tokens/create-token/steel/api/: Cargo.toml
tokens/create-token/steel/program/: Cargo.toml  build.rs
tokens/create-token/steel/tests/: bankrun.test.ts  instructions.ts  test.ts
tokens/escrow/native/: Cargo.toml  cicd.sh  package.json  pnpm-lock.yaml
tokens/escrow/native/program/: Cargo.toml
tokens/escrow/native/tests/: account.ts  instruction.ts  instructions.ts  test.ts  utils.ts
tokens/escrow/quasar/: Cargo.toml  Quasar.toml
tokens/escrow/quasar/src/: lib.rs  state.rs  tests.rs
tokens/escrow/steel/: .gitignore  .mocharc.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml
tokens/escrow/steel/api/: Cargo.toml
tokens/escrow/steel/program/: Cargo.toml
tokens/escrow/steel/tests/: account.ts  bankrun.test.ts  escrow.test.ts  instruction.ts  test.ts  types.ts  utils.ts
tokens/external-delegate-token-master/quasar/: Cargo.toml
tokens/external-delegate-token-master/quasar/src/: lib.rs  tests.rs
tokens/pda-mint-authority/steel/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
tokens/pda-mint-authority/steel/api/: Cargo.toml
tokens/pda-mint-authority/steel/program/: Cargo.toml  build.rs
tokens/pda-mint-authority/steel/tests/: instructions.ts  test.ts  tests.ts
tokens/token-swap/steel/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
tokens/token-swap/steel/ tests/: Cargo.toml  README.md  test_token_swap.rs
tokens/token-swap/steel/api/: Cargo.toml
tokens/token-swap/steel/program/: Cargo.toml
tokens/token-swap/steel/src/: instruction.rs  lib.rs  processor.rs  state.rs
tokens/transfer-tokens/steel/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  prepare.mjs
(+3869 files in other folders)
