[workspace]
members = [
    #basics
    "basics/account-data/native/program",
    "basics/account-data/anchor/programs/anchor-program-example",
    "basics/checking-accounts/native/program",
    "basics/checking-accounts/anchor/programs/anchor-program-example",
    "basics/close-account/native/program",
    "basics/close-account/anchor/programs/close-account",
    "basics/counter/native/program",
    "basics/counter/anchor/programs/counter_anchor",
    "basics/counter/mpl-stack",
    "basics/create-account/native/program",
    "basics/create-account/anchor/programs/create-system-account",
    "basics/cross-program-invocation/anchor/programs/*",
    "basics/hello-solana/native/program",
    "basics/hello-solana/anchor/programs/*",
    "basics/pda-rent-payer/native/program",
    "basics/pda-rent-payer/anchor/programs/*",
    "basics/processing-instructions/native/program",
    "basics/processing-instructions/anchor/programs/*",
    "basics/program-derived-addresses/native/program",
    "basics/program-derived-addresses/anchor/programs/*",
    "basics/realloc/native/program",
    "basics/realloc/anchor/programs/*",
    "basics/rent/native/program",
    "basics/rent/anchor/programs/*",
    "basics/repository-layout/native/program",
    "basics/repository-layout/anchor/programs/*",
    "basics/transfer-sol/native/program",
    "basics/transfer-sol/anchor/programs/*",
    "tokens/transfer-tokens/anchor/programs/*",
    "tokens/pda-mint-authority/anchor/programs/token-minter",
    "tokens/token-2022/mint-close-authority/native/program",
    "tokens/token-2022/non-transferable/native/program",
    "tokens/token-2022/default-account-state/native/program",
    "tokens/token-2022/transfer-fee/native/program",
    "tokens/token-2022/multiple-extensions/native/program",
    "tokens/token-2022/basics/anchor/programs/*",
    "tokens/token-2022/cpi-guard/anchor/programs/*",
    "tokens/token-2022/default-account-state/anchor/programs/*",
    "tokens/token-2022/interest-bearing/anchor/programs/*",
    "tokens/token-2022/interest-bearing/anchor/programs/*",
    "tokens/token-2022/memo-transfer/anchor/programs/*",
    "tokens/token-2022/metadata/anchor/programs/*",
    "tokens/token-2022/mint-close-authority/anchor/programs/*",
    "tokens/token-2022/nft-meta-data-pointer/anchor-example/anchor/programs/*",
    "tokens/token-2022/non-transferable/anchor/programs/*",
    "tokens/token-2022/permanent-delegate/anchor/programs/*",
    "tokens/token-2022/transfer-fee/anchor/programs/*"
    # "tokens/token-2022/transfer-hook/account-data-as-seed/anchor/programs/*",
    # "tokens/token-2022/transfer-hook/counter/anchor/programs/*",
    # "tokens/token-2022/transfer-hook/hello-world/anchor/programs/*",
    # "tokens/token-2022/transfer-hook/transfer-cost/anchor/programs/*",
    # "tokens/token-2022/transfer-hook/whitelist/anchor/programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
