[workspace]
members = [
    #basics
    "basics/account-data/native/program",
    "basics/account-data/pinocchio/program",
    "basics/account-data/anchor/programs/anchor-program-example",
    "basics/checking-accounts/native/program",
    "basics/checking-accounts/pinocchio/program",
    "basics/checking-accounts/anchor/programs/anchor-program-example",
    "basics/close-account/native/program",
    "basics/close-account/pinocchio/program",
    "basics/close-account/anchor/programs/close-account",
    "basics/counter/native/program",
    "basics/counter/pinocchio/program",
    "basics/counter/anchor/programs/counter_anchor",
    "basics/counter/mpl-stack",
    "basics/create-account/native/program",
    "basics/create-account/pinocchio/program",
    "basics/create-account/anchor/programs/create-system-account",
    "basics/cross-program-invocation/anchor/programs/*",
    "basics/ed25519-verification/native/program",
    "basics/ed25519-verification/anchor/programs/*",
    "basics/hello-solana/native/program",
    "basics/hello-solana/anchor/programs/*",
    "basics/hello-solana/pinocchio/program",
    "basics/pda-rent-payer/native/program",
    "basics/pda-rent-payer/pinocchio/program",
    "basics/pda-rent-payer/anchor/programs/*",
    "basics/processing-instructions/native/program",
    "basics/processing-instructions/pinocchio/program",
    "basics/processing-instructions/anchor/programs/*",
    "basics/program-derived-addresses/native/program",
    "basics/program-derived-addresses/pinocchio/program",
    "basics/program-derived-addresses/anchor/programs/*",
    "basics/realloc/native/program",
    "basics/realloc/pinocchio/program",
    "basics/realloc/anchor/programs/*",
    "basics/rent/native/program",
    "basics/rent/pinocchio/program",
    "basics/rent/anchor/programs/*",
    "basics/favorites/native/program",
    "basics/favorites/pinocchio/program",
    "basics/repository-layout/native/program",
    "basics/repository-layout/anchor/programs/*",
    "basics/transfer-sol/native/program",
    "basics/transfer-sol/pinocchio/program",
    "basics/transfer-sol/anchor/programs/*",

    # tokens
    "tokens/token-2022/mint-close-authority/native/program",
    "tokens/token-2022/non-transferable/native/program",
    "tokens/token-2022/default-account-state/native/program",
    "tokens/token-2022/transfer-fee/native/program",
    "tokens/token-2022/multiple-extensions/native/program",
]
resolver = "2"

[profile.release]
overflow-checks = true

[workspace.dependencies]

# misc
borsh = "1.5.7"
borsh-derive = "1.5.7"
mpl-token-metadata = { version = "5.1.1", features = [ "no-entrypoint" ] }


# spl
solana-program = "3.0"
spl-token = { version = "8.0.0", features = [ "no-entrypoint" ] }
spl-token-2022 = {version = "9.0.0" , features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "7.0.0", features = [ "no-entrypoint" ] }

# interface
solana-system-interface = {version = "2.0.0", features = ["bincode"]}
spl-token-interface = "2.0.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-2022-interface = "2.0.0"

# pinocchio
pinocchio = { version = "0.10.2", features = ["cpi"] }
pinocchio-log = "0.5.1"
pinocchio-system = "0.5.0"
pinocchio-pubkey = "0.3.0"

# testing
litesvm = "0.8.1"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0.0"
solana-transaction = "3.0.1"
solana-native-token = "3.0.0"
