[package]
name = "quasar-account-data"
version = "0.1.0"
edition = "2021"

# Standalone workspace — not part of the root program-examples workspace.
# Quasar uses a different resolver and dependency tree.
[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = "0.0"
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
# Not using the generated client: it depends on quasar_lang::client::DynBytes
# which isn't in the published crate yet. Tests build instruction data manually.
quasar-svm = { version = "0.1" }
solana-account = { version = "3.4.0" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
solana-pubkey = { version = "4.1.0" }
