[package]
name = "checking-account-asm-program"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
litesvm = "0.8.1"
solana-keypair = "3.0.1"
solana-native-token = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction = "3.0.1"
solana-system-interface = {version = "2.0.0", features = ["bincode"]}

[features]
test-sbf = []
