[package]
name = "checking-account-asm-program"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
litesvm = "0.11.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-native-token = "3.0.0"
solana-pubkey = "4.1.0"
solana-transaction = "3.0.1"
solana-system-interface.workspace = true
solana-transaction-error = "3.0.0"

[features]
test-sbf = []
