[workspace]
members = ["api", "program"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/solana-developers/program-examples"
documentation = "https://github.com/solana-developers/program-examples"
respository = "https://github.com/solana-developers/program-examples"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
close-account-api = { path = "./api", version = "0.1.0" }
bytemuck = "1.14"
num_enum = "0.7"
solana-program = "2.1"
steel = "3.0"
thiserror = "1.0"
