[package]
name = "counter-mpl-stack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = "0.9"
shank = "0.4.6"
solana-program = "2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
