[package]
name = "create-account-asm-program"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
litesvm = "0.11.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-native-token = "3.0.0"
solana-pubkey = "3.0.0"
solana-transaction = "4.0.0"
solana-system-interface.workspace = true

[features]
test-sbf = []
