[workspace]
resolver = "2"
members = ["program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
repository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
bytemuck = "1.14"
num_enum = "0.7"
solana-program = "=2.0.13"
steel = "=2.1.1"
thiserror = "1.0"
solana-sdk = "1.18"
