[package]
name = "asm"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
litesvm.workspace = true
solana-instruction.workspace = true
solana-address.workspace = true
solana-keypair.workspace = true
solana-native-token.workspace = true
solana-pubkey.workspace = true
solana-transaction.workspace = true
solana-system-interface.workspace = true

[features]
test-sbf = []
