[package]
name = "quasar-cnft-burn"
version = "0.1.0"
edition = "2021"

# Standalone workspace — not part of the root program-examples workspace.
# Quasar uses a different resolver and dependency tree.
[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = "0.0"
# Direct dependency for invoke_with_bounds — needed for raw CPI with variable
# proof accounts. quasar-lang re-exports types but not the invoke functions.
solana-instruction-view = { version = "2", features = ["cpi"] }
solana-instruction = { version = "3.2.0" }

[dev-dependencies]
quasar-svm = { version = "0.1" }
solana-address = { version = "2.2.0", features = ["decode"] }
