[workspace]
members = [
    "clients/rust",
    "program",
    "tests/integration-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/solana-foundation/world-cup"

[workspace.metadata.cli]
solana = "3.1.10"

[workspace.lints.rust]
unused_imports = "deny"
dead_code = "warn"
unused_variables = "warn"
deprecated = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[workspace.dependencies]
codama = "0.9.2"
const-crypto = "0.3"
pinocchio = { version = "0.11.1", features = ["cpi", "copy"] }
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
pinocchio-token-2022 = "0.3.1"
serde_json = "1"
solana-address = { version = "2", features = ["curve25519"] }
solana-security-txt = "1.1.3"
thiserror = { version = "2", default-features = false }

[profile.release]
overflow-checks = true
opt-level = 3
lto = true
codegen-units = 1
