[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
respository = "https://www.github.com/Ovodo"
readme = "./README.md"
keywords = ["solana","steel","escrow"]

[workspace.dependencies]
escrow-api = { path = "./api", version = "0.1.0" }
bytemuck = "1.14"
num_enum = "0.7"
solana-program = "1.18"
steel = { version = "2.1.1", features = ["spl"] }
thiserror = "1.0"
spl-token = { features = ["no-entrypoint"], version = "^4" }
spl-associated-token-account = { features = [ "no-entrypoint" ], version = "^2.3" }


