[package]
name = "quasar-external-delegate-token-master"
version = "0.1.0"
edition = "2021"

# Standalone workspace — not part of the root program-examples workspace.
# Quasar uses a different resolver and dependency tree.
[workspace]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib", "lib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = "0.0"
quasar-spl = "0.0"
solana-instruction = { version = "3.2.0" }
solana-define-syscall = "4.0"
solana-keccak-hasher = "3.1"

[dev-dependencies]
quasar-svm = { version = "0.1" }
spl-token-interface = { version = "2.0.0" }
solana-program-pack = { version = "3.1.0" }
