[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
respository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
api = { path = "./api", version = "0.1.0" }
bytemuck = "1.14"
num_enum = "0.7"
solana-program = "^1.18"
steel = { features = ["spl"], version = "1.3" }
spl-token = { version = "^4", features = ["no-entrypoint"] }
mpl-token-metadata = "4.1.2"
spl-associated-token-account = { version = "^2.3", features = [ "no-entrypoint" ] }
thiserror = "1.0"
solana-client = "1.18"
