[package]
name = "account-data-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh.workspace = true
borsh-derive.workspace = true
solana-program.workspace = true
solana-system-interface.workspace = true

[features]
anchor-debug = []
custom-heap = []
custom-panic = []


[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
