[package]
name = "checking-accounts-native-program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program.workspace = true
solana-system-interface.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
anchor-debug = []
custom-heap = []
custom-panic = []


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
