[package]
name = "checking-accounts-pinocchio-program"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio.workspace = true
pinocchio-system.workspace = true
pinocchio-log.workspace = true

[dev-dependencies]
litesvm.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-native-token.workspace = true
solana-pubkey.workspace = true
solana-signer.workspace = true
solana-transaction.workspace = true
solana-system-interface.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
custom-heap = []
custom-panic = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
