[package]
name = "checking-accounts-pinocchio-program"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio.workspace = true
pinocchio-system.workspace = true
pinocchio-log.workspace = true

[dev-dependencies]
litesvm = "0.8.1"
solana-keypair = "3.1.0"
solana-native-token = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk = "3.0.0"
solana-transaction = "3.0.1"
solana-system-interface.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
custom-heap = []
custom-panic = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
