[package]
name = "close-account-pinocchio-program"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio.workspace = true
pinocchio-log.workspace = true
pinocchio-pubkey.workspace = true
pinocchio-system.workspace = true

[dev-dependencies]
litesvm = "0.8.1"
solana-keypair = "3.1.0"
solana-message = "3.0.1"
solana-native-token = "3.0.0"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.1"
solana-system-interface.workspace = true
solana-instruction.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
custom-heap = []
custom-panic = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
