[package]
name = "counter-solana-pinocchio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []

[dependencies]
pinocchio.workspace = true
pinocchio-log.workspace = true
pinocchio-pubkey.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
litesvm.workspace = true
solana-instruction.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-native-token.workspace = true
solana-pubkey.workspace = true
solana-rent.workspace = true
solana-signer.workspace = true
solana-transaction.workspace = true
solana-system-interface.workspace = true
